--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --hide-scrollbar: none;
+}
+
 * {
   -webkit-tap-highlight-color: transparent;
   -ms-tap-highlight-color: transparent;
-}
-
-::-webkit-scrollbar {
-  display: none;
-  width: 0px;
-  -webkit-appearance: none;
 }
 
 a,
@@ -34,6 +32,29 @@ img::selection {
   background: transparent !important;
 }
 
+::-webkit-scrollbar {
+  display: var(--hide-scrollbar);
+  width: 10px;
+  height: 10px;
+  transition: all 1s ease 0s;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ababab;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: padding-box;
+  transition: all 1s ease 0s;
+}
+
+::-webkit-scrollbar-thumb:active {
+  border: 0;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
 .loading-bg-black {
   background-color: black;
 }
@@ -47,23 +68,6 @@ img::selection {
   box-shadow: 15px 15px 50px rgba(0, 0, 0, 0.2);
   animation: morphing 10s infinite;
   overflow: hidden;
-}
-
-@keyframes morphing {
-  0% {
-    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
-    box-shadow: 15px 15px 50px rgba(0, 0, 0, 0.2);
-  }
-  25% {
-    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
-  }
-  50% {
-    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
-    box-shadow: -10px -5px 50px rgba(0, 0, 0, 0.2);
-  }
-  75% {
-    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
-  }
 }
 
 .scroll-reveal span {
@@ -90,13 +94,214 @@ img::selection {
   animation-range-end: cover 75vh;
 }
 
+.mouse-down-animation {
+  width: 30px;
+  height: 50px;
+  border: 1.5px solid #ffffff;
+  border-radius: 60px;
+  position: relative;
+  &::before {
+    content: "";
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ffffff;
+    border-radius: 50%;
+    opacity: 1;
+    animation: wheel 2s infinite;
+  }
+}
+
+.suggestion-label-animation-move {
+  animation-name: move;
+  animation-duration: 8s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.techthatiknow-animation-move {
+  animation-name: move;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.techthatiknow-animation-duration-1 {
+  animation-duration: 2s;
+}
+
+.techthatiknow-animation-duration-2 {
+  animation-duration: 2s;
+}
+
+.techthatiknow-animation-duration-3 {
+  animation-duration: 2s;
+}
+
+.animation-direction-normal {
+  animation-direction: normal;
+}
+
+.animation-direction-reverse {
+  animation-direction: reverse;
+}
+
+.bubbleText {
+  transition:
+    0.35s font-weight,
+    0.35s color;
+}
+
+.bubbleText:hover {
+  font-weight: 900;
+  color: rgb(238, 242, 255);
+}
+
+/* To the right */
+.bubbleText:hover + .bubbleText {
+  font-weight: 500;
+  color: rgb(199, 210, 254);
+}
+
+.bubbleText:hover + .bubbleText + .bubbleText {
+  font-weight: 300;
+}
+
+/* To the left */
+.bubbleText:has(+ .bubbleText:hover) {
+  font-weight: 500;
+  color: rgb(199, 210, 254);
+}
+
+.bubbleText:has(+ .bubbleText + .bubbleText:hover) {
+  font-weight: 300;
+}
+
+.letter-changing {
+  line-height: 0rem;
+  position: absolute;
+}
+
+.letter-changing:after {
+  content: "";
+  animation-name: letter-changing;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  filter: drop-shadow(0px 0px 50px rgba(255, 255, 255, 0.2));
+}
+
 @keyframes scroll-reveal {
   to {
     background-size: 100% 100%;
   }
 }
 
+@keyframes wheel {
+  to {
+    opacity: 0;
+    top: 35px;
+  }
+}
+
+@keyframes move {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes MoveUpDown {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+}
+
+@keyframes MoveRightLeft {
+  0%,
+  100% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(50px);
+  }
+}
+
+@keyframes MoveLeftRight {
+  0%,
+  100% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(-50px);
+  }
+}
+
+@keyframes morphing {
+  0% {
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0, 0, 0, 0.2);
+  }
+  25% {
+    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0, 0, 0, 0.2);
+  }
+  75% {
+    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
+  }
+}
+
+@keyframes letter-changing {
+  0% {
+    content: "s";
+  }
+  14% {
+    content: "a";
+  }
+  28% {
+    content: "y";
+  }
+  42% {
+    content: "h";
+  }
+  56% {
+    content: "e";
+  }
+  70% {
+    content: "y";
+  }
+  84% {
+    content: "!";
+  }
+  100% {
+    content: "s";
+  }
+}
+
 @media (min-width: 640px) {
+  .techthatiknow-animation-duration-1 {
+    animation-duration: 90s;
+  }
+
+  .techthatiknow-animation-duration-2 {
+    animation-duration: 40s;
+  }
+
+  .techthatiknow-animation-duration-3 {
+    animation-duration: 140s;
+  }
+
   .scroll-reveal h1 span {
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
     background-image: linear-gradient(to right, #f472b6, #8014e6);
@@ -145,177 +350,5 @@ img::selection {
     animation: MoveUpDown 5s linear infinite;
     animation-delay: 0ms;
     transform: translateY(0px);
-  }
-}
-
-@keyframes MoveUpDown {
-  0%,
-  100% {
-    transform: translateY(0px);
-  }
-  50% {
-    transform: translateY(50px);
-  }
-}
-
-@keyframes MoveRightLeft {
-  0%,
-  100% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(50px);
-  }
-}
-
-@keyframes MoveLeftRight {
-  0%,
-  100% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(-50px);
-  }
-}
-
-.mouse-down-animation {
-  width: 30px;
-  height: 50px;
-  border: 1.5px solid #ffffff;
-  border-radius: 60px;
-  position: relative;
-  &::before {
-    content: "";
-    width: 8px;
-    height: 8px;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ffffff;
-    border-radius: 50%;
-    opacity: 1;
-    animation: wheel 2s infinite;
-  }
-}
-
-@keyframes wheel {
-  to {
-    opacity: 0;
-    top: 35px;
-  }
-}
-
-.suggestion-label-animation-move {
-  animation-name: move;
-  animation-duration: 8s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-.techthatiknow-animation-move {
-  animation-name: move;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-.techthatiknow-animation-duration-40 {
-  animation-duration: 40s;
-}
-
-.techthatiknow-animation-duration-90 {
-  animation-duration: 90s;
-}
-
-.techthatiknow-animation-duration-140 {
-  animation-duration: 140s;
-}
-
-.animation-direction-normal {
-  animation-direction: normal;
-}
-
-.animation-direction-reverse {
-  animation-direction: reverse;
-}
-
-@keyframes move {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-.bubbleText {
-  transition:
-    0.35s font-weight,
-    0.35s color;
-}
-
-.bubbleText:hover {
-  font-weight: 900;
-  color: rgb(238, 242, 255);
-}
-
-/* To the right */
-.bubbleText:hover + .bubbleText {
-  font-weight: 500;
-  color: rgb(199, 210, 254);
-}
-
-.bubbleText:hover + .bubbleText + .bubbleText {
-  font-weight: 300;
-}
-
-/* To the left */
-.bubbleText:has(+ .bubbleText:hover) {
-  font-weight: 500;
-  color: rgb(199, 210, 254);
-}
-
-.bubbleText:has(+ .bubbleText + .bubbleText:hover) {
-  font-weight: 300;
-}
-
-.letter-changing {
-  line-height: 0rem;
-  position: absolute;
-}
-
-.letter-changing:after {
-  content: "";
-  animation-name: letter-changing;
-  animation-duration: 5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  filter: drop-shadow(0px 0px 50px rgba(255, 255, 255, 0.2));
-}
-
-@keyframes letter-changing {
-  0% {
-    content: "s";
-  }
-  14% {
-    content: "a";
-  }
-  28% {
-    content: "y";
-  }
-  42% {
-    content: "h";
-  }
-  56% {
-    content: "e";
-  }
-  70% {
-    content: "y";
-  }
-  84% {
-    content: "!";
-  }
-  100% {
-    content: "s";
   }
 }
